--- a/lang/wpnoexternallinks-ru_RU.po
+++ b/lang/wpnoexternallinks-ru_RU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wp-noexternallinks\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-12-01 18:00+0400\n"
-"PO-Revision-Date: 2013-12-01 18:00+0400\n"
+"PO-Revision-Date: 2014-03-11 14:40+0400\n"
 "Last-Translator: Jehy <fate@jehy.ru>\n"
 "Language-Team: jehy <fate@jehy.ru>\n"
 "Language: ru_RU\n"
@@ -13,7 +13,7 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: C:\\WEB\\svn\\noexternalinks\\trunk\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Generator: Poedit 1.5.3\n"
+"X-Generator: Poedit 1.6.4\n"
 "X-Poedit-SearchPath-0: C:\\WEB\\svn\\noexternalinks\\trunk\n"
 
 #: C:\WEB\svn\noexternalinks\trunk/wp-noexternallinks-options.php:34
@@ -263,8 +263,8 @@ msgid ""
 "HERE NOW&lt;/a&gt;</b>"
 msgstr ""
 "Свой текст редиректа, если 302 отключены. Используйте слово \"LINKURL\" там, "
-"где должен быть адрес для перехода. Например, так: <b>ЖМИ &lt;a href=\"LINK"
-"\"&gt;СЮДА&lt;/a&gt;</b>"
+"где должен быть адрес для перехода. Например, так: <b>ЖМИ &lt;a href="
+"\"LINKURL\"&gt;СЮДА&lt;/a&gt;</b>"
 
 #: C:\WEB\svn\noexternalinks\trunk/wp-noexternallinks.php:84
 msgid "Do not mask links when registered users visit site"
